Update project with latest changes

--- a/src/app/compontens/header/header.component.html
+++ b/src/app/compontens/header/header.component.html
@@ -1,4 +1,4 @@
-  <header class="main_menu home_menu">
+  <header class="main_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
@@ -30,9 +30,9 @@
                                         Dashboard
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="add-chef.component.html">Add-chef</a>
-                                        <a class="dropdown-item" href="single-blog.html">Add-menu</a>
-                                        <a class="dropdown-item" href="elements.html">Admin</a>
+                                        <a class="dropdown-item" routerLink="addChef">Add-chef</a>
+                                        <a class="dropdown-item" routerLink="addMenu">Add-menu</a>
+                                        <a class="dropdown-item" routerLink="admin">Admin</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
@@ -41,10 +41,12 @@
                             </ul>
                         </div>
                         <div class="menu_btn">
-                            <a href="#" class="btn_1 d-none d-sm-block">book a tabel</a>
+                            <a href="#" class="single_page_btn d-none d-sm-block">book a tabel</a>
                         </div>
                     </nav>
                 </div>
             </div>
         </div>
     </header>
+  
+ 
