Your descriptive commit message

--- a/src/app/compontens/header/header.component.html
+++ b/src/app/compontens/header/header.component.html
@@ -20,10 +20,10 @@
                                     <a class="nav-link" href="about.html">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="food_menu.html">Menu</a>
+                                    <a class="nav-link" routerLink="menu">Menu</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="chefs.html">Chefs</a>
+                                    <a class="nav-link" routerLink="chefs">Chefs</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
