--- a/src/app/compontens/add-chef/add-chef.component.html
+++ b/src/app/compontens/add-chef/add-chef.component.html
@@ -1,78 +1,88 @@
 <section class="breadcrumb breadcrumb_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="breadcrumb_iner text-center">
-                    <div class="breadcrumb_iner_item">
-                        <h2>Add Chef</h2>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="breadcrumb_iner text-center">
+          <div class="breadcrumb_iner_item">
+            <h2>Add Chef</h2>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
 
 <!-- ================ contact section start ================= -->
 <section class="contact-section section_padding">
-    <div class="container">
-
-        <div class="row">
-
-            <div class="col-lg-8">
-                <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm"
-                    novalidate="novalidate">
-                    <div class="row">
-
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <input class="form-control" name="name" id="name" type="text"
-                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'"
-                                    placeholder='Name'>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <input class="form-control" name="email" id="email" type="text"
-                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Speciality'"
-                                    placeholder='Speciality'>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-group">
-                                <input class="form-control" name="subject" id="subject" type="text"
-                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Experience'"
-                                    placeholder='Experience'>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group mt-3">
-                        <button type="submit" class="button button-contactForm btn_4">Add</button>
-                    </div>
-                </form>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <form class="form-contact contact_form" (ngSubmit)="addChef()">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <input
+                  class="form-control"
+                  [(ngModel)]="obj.name"
+                  name="name"
+                  type="text"
+                  placeholder="Name"
+                />
+              </div>
             </div>
-            <div class="col-lg-4">
-                <div class="media contact-info">
-                    <span class="contact-info__icon"><i class="ti-home"></i></span>
-                    <div class="media-body">
-                        <h3>Buttonwood, California.</h3>
-                        <p>Rosemead, CA 91770</p>
-                    </div>
-                </div>
-                <div class="media contact-info">
-                    <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-                    <div class="media-body">
-                        <h3>00 (440) 9865 562</h3>
-                        <p>Mon to Fri 9am to 6pm</p>
-                    </div>
-                </div>
-                <div class="media contact-info">
-                    <span class="contact-info__icon"><i class="ti-email"></i></span>
-                    <div class="media-body">
-                        <h3>support&#64;colorlib.com</h3>
-                        <p>Send us your query anytime!</p>
-                    </div>
-                </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <input
+                  class="form-control"
+                  [(ngModel)]="obj.speciality"
+                  name="speciality"
+                  type="text"
+                  placeholder="Speciality"
+                />
+              </div>
             </div>
+            <div class="col-12">
+              <div class="form-group">
+                <input
+                  class="form-control"
+                  [(ngModel)]="obj.subject"
+                  name="subject"
+                  type="text"
+                  placeholder="Experience"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <button type="submit" class="button button-contactForm btn_4">
+              Add
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="col-lg-4">
+        <div class="media contact-info">
+          <span class="contact-info__icon"><i class="ti-home"></i></span>
+          <div class="media-body">
+            <h3>Buttonwood, California.</h3>
+            <p>Rosemead, CA 91770</p>
+          </div>
         </div>
+        <div class="media contact-info">
+          <span class="contact-info__icon"><i class="ti-tablet"></i></span>
+          <div class="media-body">
+            <h3>00 (440) 9865 562</h3>
+            <p>Mon to Fri 9am to 6pm</p>
+          </div>
+        </div>
+        <div class="media contact-info">
+          <span class="contact-info__icon"><i class="ti-email"></i></span>
+          <div class="media-body">
+            <h3>support&#64;colorlib.com</h3>
+            <p>Send us your query anytime!</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
