--- a/src/app/compontens/chef-edit/chef-edit.component.html
+++ b/src/app/compontens/chef-edit/chef-edit.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12">
         <div class="breadcrumb_iner text-center">
           <div class="breadcrumb_iner_item">
-            <h2>Add Menu</h2>
+            <h2>Edit Chef</h2>
           </div>
         </div>
       </div>
@@ -16,9 +16,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <form class="form-contact contact_form" (ngSubmit)="addMenu()">
+        <form class="form-contact contact_form" (ngSubmit)="chefEdit()">
           <div class="row">
-            <div class="col-12"></div>
             <div class="col-sm-6">
               <div class="form-group">
                 <input
@@ -34,10 +33,10 @@
               <div class="form-group">
                 <input
                   class="form-control"
-                  [(ngModel)]="obj.description"
-                  name="description"
+                  [(ngModel)]="obj.speciality"
+                  name="speciality"
                   type="text"
-                  placeholder="Description"
+                  placeholder="Speciality"
                 />
               </div>
             </div>
@@ -45,17 +44,17 @@
               <div class="form-group">
                 <input
                   class="form-control"
-                  [(ngModel)]="obj.prcie"
-                  name="prcie"
+                  [(ngModel)]="obj.subject"
+                  name="subject"
                   type="text"
-                  placeholder="Price"
+                  placeholder="Experience"
                 />
               </div>
             </div>
           </div>
           <div class="form-group mt-3">
             <button type="submit" class="button button-contactForm btn_4">
-              Add
+              Edit
             </button>
           </div>
         </form>
