--- a/src/app/compontens/header/header.component.html
+++ b/src/app/compontens/header/header.component.html
@@ -1,52 +1,70 @@
-  <header class="main_menu">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+<header class="main_menu">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-12">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-                        <div class="collapse navbar-collapse main-menu-item justify-content-end"
-                            id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLink="menu">Menu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLink="chefs">Chefs</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Dashboard
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" routerLink="addChef">Add-chef</a>
-                                        <a class="dropdown-item" routerLink="addMenu">Add-menu</a>
-                                        <a class="dropdown-item" routerLink="admin">Admin</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="menu_btn">
-                            <a href="#" class="single_page_btn d-none d-sm-block">book a tabel</a>
-                        </div>
-                    </nav>
+          <div
+            class="collapse navbar-collapse main-menu-item justify-content-end"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="menu">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="chefs">Chefs</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="blog.html"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Dashboard
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" routerLink="addChef">Add-chef</a>
+                  <a class="dropdown-item" routerLink="addMenu">Add-menu</a>
+                  <a class="dropdown-item" routerLink="admin">Admin</a>
                 </div>
-            </div>
-        </div>
-    </header>
-  
- 
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="signup">sign up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="signin">login</a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu_btn">
+            <a href="#" class="single_page_btn d-none d-sm-block"
+              >book a tabel</a
+            >
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
