--- a/src/app/compontens/menu-edit/menu-edit.component.html
+++ b/src/app/compontens/menu-edit/menu-edit.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12">
         <div class="breadcrumb_iner text-center">
           <div class="breadcrumb_iner_item">
-            <h2>Add Menu</h2>
+            <h2>Edit Menu</h2>
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <form class="form-contact contact_form" (ngSubmit)="addMenu()">
+        <form class="form-contact contact_form" (ngSubmit)="chefEdit()">
           <div class="row">
             <div class="col-12"></div>
             <div class="col-sm-6">
