--- a/src/app/compontens/menu-table/menu-table.component.html
+++ b/src/app/compontens/menu-table/menu-table.component.html
@@ -1,18 +1,24 @@
 <table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Price</th>
-            <th scope="col">description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of menuItems">
-            <th scope="row">{{ item.id }}</th>
-            <td>{{ item.name }}</td>
-            <td>{{ item.price }}</td>
-            <td>{{ item.description }}</td>
-        </tr>
-    </tbody>
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">description</th>
+      <th scope="col">Acitons</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of menuTab">
+      <th scope="row">{{ item.id }}</th>
+      <td>{{ item.name }}</td>
+      <td>{{ item.description }}</td>
+      <td>{{ item.prcie }}</td>
+      <button class="btn btn-info mr-2" (click)="goToInfo(item.id)">
+        Info
+      </button>
+      <button class="btn btn-warning" (click)="goToEdit(item.id)">Edit</button>
+      <button class="btn btn-danger" (click)="deleteMatch(item.id)">Delete</button>
+    </tr>
+  </tbody>
 </table>
