--- a/src/app/compontens/add-chef/add-chef.component.html
+++ b/src/app/compontens/add-chef/add-chef.component.html
@@ -12,14 +12,18 @@
   </div>
 </section>
 
-<!-- ================ contact section start ================= -->
 <section class="contact-section section_padding">
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <form class="form-contact contact_form" (ngSubmit)="addChef()">
+        <form
+          class="form-contact contact_form"
+          #chefsForm="ngForm"
+          (ngSubmit)="addChef(chefsForm)"
+        >
           <div class="row">
             <div class="col-sm-6">
+              <!--Name-->
               <div class="form-group">
                 <input
                   class="form-control"
@@ -27,9 +31,21 @@
                   name="name"
                   type="text"
                   placeholder="Name"
+                  required
+                  minlength="5"
+                  #name="ngModel"
                 />
+                <div *ngIf="name.invalid && name.touched">
+                  <small class="text-danger" *ngIf="name.errors?.['required']"
+                    >Name is required</small
+                  >
+                  <small class="text-danger" *ngIf="name.errors?.['minlength']">
+                    Name must be at least 5 chars</small
+                  >
+                </div>
               </div>
             </div>
+            <!--Speciality-->
             <div class="col-sm-6">
               <div class="form-group">
                 <input
@@ -38,25 +54,52 @@
                   name="speciality"
                   type="text"
                   placeholder="Speciality"
+                  required
+                  #speciality="ngModel"
                 />
+                <div *ngIf="speciality.invalid && speciality.touched">
+                  <small
+                    class="text-danger"
+                    *ngIf="speciality.errors?.['required']"
+                    >Speciality is required</small
+                  >
+                </div>
               </div>
             </div>
+            <!--Eperinece-->
             <div class="col-12">
               <div class="form-group">
                 <input
                   class="form-control"
                   [(ngModel)]="obj.subject"
                   name="subject"
-                  type="text"
+                  type="number"
                   placeholder="Experience"
+                  required
+                  min="2"
+                  #experience="ngModel"
                 />
+                <div *ngIf="experience.invalid && experience.touched">
+                  <small
+                    class="text-danger"
+                    *ngIf="experience.errors?.['required']"
+                    >Experience is required</small
+                  >
+                  <small class="text-danger" *ngIf="experience.errors?.['min']"
+                    >Experience must be al least two years</small
+                  >
+                </div>
               </div>
             </div>
           </div>
+          <!--Submit-->
           <div class="form-group mt-3">
-            <button type="submit" class="button button-contactForm btn_4">
-              Add
-            </button>
+            <input
+              type="submit"
+              class="button button-contactForm btn_4"
+              value="Add"
+              [disabled]="chefsForm.invalid"
+            />
           </div>
         </form>
       </div>
