--- a/src/app/compontens/chef/chef.component.html
+++ b/src/app/compontens/chef/chef.component.html
@@ -1,16 +1,16 @@
- <div class="single_blog_item">
-                        <div class="single_blog_img">
-                            <img src={{chefData.image}} alt="">
-                        </div>
-                        <div class="single_blog_text text-center">
-                            <h3>{{chefData.name}}</h3>
-                            <p>{{chefData.experience}}</p>
-                            <p>{{chefData.speciality}}</p>
-                            <div class="social_icon">
-                                <a href="#"> <i class="ti-facebook"></i></a>
-                                <a href="#"> <i class="ti-twitter-alt"></i> </a>
-                                <a href="#"> <i class="ti-instagram"></i> </a>
-                                <a href="#"> <i class="ti-skype"></i> </a>
-                            </div>
-                        </div>
-                    </div>
+<div class="single_blog_item">
+  <div class="single_blog_img">
+    <img src="img/team/chefs_1.png" alt="" />
+  </div>
+  <div class="single_blog_text text-center">
+    <h3>{{ chefData.name }}</h3>
+    <p>{{ chefData.experience }}</p>
+    <p>{{ chefData.speciality }}</p>
+    <div class="social_icon">
+      <a href="#"> <i class="ti-facebook"></i></a>
+      <a href="#"> <i class="ti-twitter-alt"></i> </a>
+      <a href="#"> <i class="ti-instagram"></i> </a>
+      <a href="#"> <i class="ti-skype"></i> </a>
+    </div>
+  </div>
+</div>
