--- a/src/app/compontens/header/header.component.html
+++ b/src/app/compontens/header/header.component.html
@@ -24,7 +24,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" routerLink="">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="menu">Menu</a>
