--- a/src/app/compontens/menu-info/menu-info.component.html
+++ b/src/app/compontens/menu-info/menu-info.component.html
@@ -1,1 +1,17 @@
-<p>menu-info works!</p>
+<app-banner-name title="Menu Info"></app-banner-name>
+<section class="food_menu gray_bg">
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="col-lg-5">
+        <div class="section_tittle">
+          <h2>Delicious Food Menu</h2>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-lg-6">
+            <app-plat [platData]="plat"></app-plat>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
