--- a/src/app/compontens/add-menu/add-menu.component.html
+++ b/src/app/compontens/add-menu/add-menu.component.html
@@ -1,16 +1,4 @@
-<section class="breadcrumb breadcrumb_bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="breadcrumb_iner text-center">
-          <div class="breadcrumb_iner_item">
-            <h2>Add Menu</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<app-banner-name title="Add Menu"></app-banner-name>
 
 <section class="contact-section section_padding">
   <div class="container">
@@ -57,7 +45,7 @@
                   placeholder="Description"
                   required
                   minlength="10"
-                  maxlength="30"
+                  maxlength="100"
                   #description="ngModel"
                 />
                 <div *ngIf="description.invalid && description.touched">
@@ -69,7 +57,7 @@
                   <small
                     class="text-danger"
                     *ngIf="description.errors?.['minlength']"
-                    >Description must be at least 10 chars</small
+                    >Description must be at least 100 chars</small
                   >
                 </div>
               </div>
@@ -109,13 +97,14 @@
                   required
                   #category="ngModel"
                 >
-                  <option value="" disabled selected>Select Category</option>
+                  <option disabled [ngValue]="null">Select Category</option>
                   <option value="Special">Special</option>
                   <option value="Breakfast">Breakfast</option>
                   <option value="Launch">Launch</option>
                   <option value="Dinner">Dinner</option>
                   <option value="Sneaks">Sneaks</option>
                 </select>
+
                 <div *ngIf="category.invalid && category.touched">
                   <small
                     class="text-danger"
@@ -139,9 +128,7 @@
                   #image="ngModel"
                 />
                 <div *ngIf="image.invalid && image.touched">
-                  <small
-                    class="text-danger"
-                    *ngIf="image.errors?.['required']"
+                  <small class="text-danger" *ngIf="image.errors?.['required']"
                     >Image URL is required</small
                   >
                 </div>
@@ -150,8 +137,8 @@
           </div>
 
           <div class="form-group mt-3">
-            <button 
-              type="submit" 
+            <button
+              type="submit"
               class="button button-contactForm btn_4"
               [disabled]="menuForm.invalid"
             >
