--- a/src/app/compontens/chef-info/chef-info.component.html
+++ b/src/app/compontens/chef-info/chef-info.component.html
@@ -1,1 +1,19 @@
-<p>chef-info works!</p>
+<app-banner-name title="Chef Info"></app-banner-name>
+
+<section class="chefs_part blog_item_section section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-5">
+                <div class="section_tittle">
+                    <p>Team Member</p>
+                    <h2>Our Experience Chefs</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-lg-4">
+                <app-chef [chefData]="foundChef"></app-chef>
+            </div>
+        </div>
+    </div>
+</section>
