--- a/src/app/compontens/menu-table/menu-table.component.html
+++ b/src/app/compontens/menu-table/menu-table.component.html
@@ -12,13 +12,19 @@
     <tr *ngFor="let item of menuTab">
       <th scope="row">{{ item.id }}</th>
       <td>{{ item.name }}</td>
+      <td>{{ item.price }}</td>
       <td>{{ item.description }}</td>
-      <td>{{ item.prcie }}</td>
-      <button class="btn btn-info mr-2" (click)="goToInfo(item.id)">
-        Info
-      </button>
-      <button class="btn btn-warning" (click)="goToEdit(item.id)">Edit</button>
-      <button class="btn btn-danger" (click)="deleteMatch(item.id)">Delete</button>
+      <td>
+        <button class="btn btn-info mr-2" (click)="goToInfo(item.id)">
+          Info
+        </button>
+        <button class="btn btn-warning" (click)="goToEdit(item.id)">
+          Edit
+        </button>
+        <button class="btn btn-danger" (click)="deleteMatch(item.id)">
+          Delete
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
