--- a/src/app/compontens/menu/menu.component.html
+++ b/src/app/compontens/menu/menu.component.html
@@ -1,73 +1,138 @@
 <section class="food_menu gray_bg">
-    <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-lg-5">
-                <div class="section_tittle">
-                    <p>Popular Menu</p>
-                    <h2>Delicious Food Menu</h2>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="nav nav-tabs food_menu_nav" id="myTab" role="tablist">
-                    <a class="active" id="Special-tab" data-toggle="tab" href="#Special" role="tab"
-                        aria-controls="Special" aria-selected="false">Special <img src="img/icon/play.svg"
-                            alt="play"></a>
-                    <a id="Breakfast-tab" data-toggle="tab" href="#Breakfast" role="tab" aria-controls="Breakfast"
-                        aria-selected="false">Breakfast <img src="img/icon/play.svg" alt="play"></a>
-                    <a id="Launch-tab" data-toggle="tab" href="#Launch" role="tab" aria-controls="Launch"
-                        aria-selected="false">Launch <img src="img/icon/play.svg" alt="play"></a>
-                    <a id="Dinner-tab" data-toggle="tab" href="#Dinner" role="tab" aria-controls="Dinner"
-                        aria-selected="false">Dinner <img src="img/icon/play.svg" alt="play"> </a>
-                    <a id="Sneaks-tab" data-toggle="tab" href="#Sneaks" role="tab" aria-controls="Sneaks"
-                        aria-selected="false">Sneaks <img src="img/icon/play.svg" alt="play"></a>
-                </div>
-            </div>
-            <div class="col-lg-12">
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active single-member" id="Special" role="tabpanel"
-                        aria-labelledby="Special-tab">
-                        <div class="row">
-                            <div class="col-sm-6 col-lg-6" *ngFor="let plat of plats[0].items">
-                                <app-plat></app-plat>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tab-pane fade single-member" id="Breakfast" role="tabpanel"
-                        aria-labelledby="Breakfast-tab">
-                        <div class="row">
-                            <div class="col-sm-6 col-lg-6" *ngFor="let plat of plats[0].items">
-                                <app-plat></app-plat>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tab-pane fade single-member" id="Launch" role="tabpanel" aria-labelledby="Launch-tab">
-                        <div class="row">
-                            <div class="col-sm-6 col-lg-6" *ngFor="let plat of plats[0].items">
-                                <app-plat></app-plat>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tab-pane fade single-member" id="Dinner" role="tabpanel" aria-labelledby="Dinner-tab">
-                        <div class="row">
-                            <div class="col-sm-6 col-lg-6" *ngFor="let plat of plats[0].items">
-                                <app-plat></app-plat>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tab-pane fade single-member" id="Sneaks" role="tabpanel" aria-labelledby="Sneaks-tab">
-                        <div class="row">
-                            <div class="col-sm-6 col-lg-6" *ngFor="let plat of plats[0].items">
-                                <app-plat></app-plat>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="col-lg-5">
+        <div class="section_tittle">
+          <p>Popular Menu</p>
+          <h2>Delicious Food Menu</h2>
         </div>
-    </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="nav nav-tabs food_menu_nav" id="myTab" role="tablist">
+          <a
+            class="active"
+            id="Special-tab"
+            data-toggle="tab"
+            href="#Special"
+            role="tab"
+            aria-controls="Special"
+            aria-selected="false"
+            >Special <img src="img/icon/play.svg" alt="play"
+          /></a>
+          <a
+            id="Breakfast-tab"
+            data-toggle="tab"
+            href="#Breakfast"
+            role="tab"
+            aria-controls="Breakfast"
+            aria-selected="false"
+            >Breakfast <img src="img/icon/play.svg" alt="play"
+          /></a>
+          <a
+            id="Launch-tab"
+            data-toggle="tab"
+            href="#Launch"
+            role="tab"
+            aria-controls="Launch"
+            aria-selected="false"
+            >Launch <img src="img/icon/play.svg" alt="play"
+          /></a>
+          <a
+            id="Dinner-tab"
+            data-toggle="tab"
+            href="#Dinner"
+            role="tab"
+            aria-controls="Dinner"
+            aria-selected="false"
+            >Dinner <img src="img/icon/play.svg" alt="play" />
+          </a>
+          <a
+            id="Sneaks-tab"
+            data-toggle="tab"
+            href="#Sneaks"
+            role="tab"
+            aria-controls="Sneaks"
+            aria-selected="false"
+            >Sneaks <img src="img/icon/play.svg" alt="play"
+          /></a>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="tab-content" id="myTabContent">
+          <!-- Special Tab -->
+          <div
+            class="tab-pane fade show active single-member"
+            id="Special"
+            role="tabpanel"
+            aria-labelledby="Special-tab"
+          >
+            <div class="row">
+              <div class="col-sm-6 col-lg-6" *ngFor="let plat of specialItems">
+                <app-plat [platData]="plat"></app-plat>
+              </div>
+            </div>
+          </div>
 
+          <!-- Breakfast Tab -->
+          <div
+            class="tab-pane fade single-member"
+            id="Breakfast"
+            role="tabpanel"
+            aria-labelledby="Breakfast-tab"
+          >
+            <div class="row">
+              <div
+                class="col-sm-6 col-lg-6"
+                *ngFor="let plat of breakfastItems"
+              >
+                <app-plat [platData]="plat"></app-plat>
+              </div>
+            </div>
+          </div>
+
+          <!-- Launch Tab -->
+          <div
+            class="tab-pane fade single-member"
+            id="Launch"
+            role="tabpanel"
+            aria-labelledby="Launch-tab"
+          >
+            <div class="row">
+              <div class="col-sm-6 col-lg-6" *ngFor="let plat of launchItems">
+                <app-plat [platData]="plat"></app-plat>
+              </div>
+            </div>
+          </div>
+
+          <!-- Dinner Tab -->
+          <div
+            class="tab-pane fade single-member"
+            id="Dinner"
+            role="tabpanel"
+            aria-labelledby="Dinner-tab"
+          >
+            <div class="row">
+              <div class="col-sm-6 col-lg-6" *ngFor="let plat of dinnerItems">
+                <app-plat [platData]="plat"></app-plat>
+              </div>
+            </div>
+          </div>
+
+          <!-- Sneaks Tab -->
+          <div
+            class="tab-pane fade single-member"
+            id="Sneaks"
+            role="tabpanel"
+            aria-labelledby="Sneaks-tab"
+          >
+            <div class="row">
+              <div class="col-sm-6 col-lg-6" *ngFor="let plat of sneaksItems">
+                <app-plat [platData]="plat"></app-plat>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
