--- a/src/app/compontens/plat/plat.component.html
+++ b/src/app/compontens/plat/plat.component.html
@@ -1,8 +1,9 @@
 <div class="single_food_item media">
-    <img src="img/food_menu/single_food_1.png" class="mr-3" alt="...">
-    <div class="media-body align-self-center">
-        <h3></h3>
-        <p>They're wherein heaven seed hath nothing</p>
-        <h5>$40.00</h5>
-    </div>
+  <img src="img/food_menu/single_food_1.png" class="mr-3" alt="..." />
+  <div class="media-body align-self-center">
+    <h3>{{ platData.name }}</h3>
+    <p>{{ platData.description }}</p>
+    <p>{{ platData.price }} $</p>
+    <img  alt="{{ platData.name }}" />
+  </div>
 </div>
