--- a/src/app/compontens/chef-edit/chef-edit.component.html
+++ b/src/app/compontens/chef-edit/chef-edit.component.html
@@ -59,7 +59,7 @@
               <div class="form-group">
                 <input
                   class="form-control"
-                  [(ngModel)]="obj.subject"
+                  [(ngModel)]="obj.experience"
                   name="subject"
                   type="number"
                   placeholder="Experience"
@@ -80,7 +80,7 @@
               </div>
             </div>
             <!--Image URL-->
-            <div class="col-6">
+            <!-- <div class="col-6">
               <div class="form-group">
                 <input
                   class="form-control"
@@ -97,7 +97,7 @@
                   >
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <!--Submit-->
