--- a/src/app/compontens/add-menu/add-menu.component.html
+++ b/src/app/compontens/add-menu/add-menu.component.html
@@ -7,7 +7,7 @@
         <form
           class="form-contact contact_form"
           #menuForm="ngForm"
-          (ngSubmit)="addMenu(menuForm)"
+          (ngSubmit)="addMenu()"
         >
           <div class="row">
             <!--Name-->
@@ -116,7 +116,7 @@
             </div>
 
             <!--Image URL-->
-            <div class="col-12">
+            <!-- <div class="col-12">
               <div class="form-group">
                 <input
                   class="form-control"
@@ -133,7 +133,7 @@
                   >
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="form-group mt-3">
