--- a/src/app/compontens/menu-edit/menu-edit.component.html
+++ b/src/app/compontens/menu-edit/menu-edit.component.html
@@ -128,7 +128,7 @@
               </div>
             </div>
 
-            <!--Image URL-->
+            <!-- Image URL
             <div class="col-12">
               <div class="form-group">
                 <input
@@ -146,7 +146,7 @@
                   >
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="form-group mt-3">
