--- a/src/app/compontens/signup/signup.component.html
+++ b/src/app/compontens/signup/signup.component.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-7">
-        <form [formGroup]="superVariable" class="form-contact contact_form">
+        <form [formGroup]="signupForm" class="form-contact contact_form">
           <!-- First Name -->
           <div class="form-group">
             <input
@@ -26,18 +26,19 @@
               placeholder="First Name"
             />
             <div
+              class="text-danger"
               *ngIf="
-                superVariable.controls['firstName'].invalid &&
-                superVariable.controls['firstName'].touched
+                signupForm.controls['firstName'].invalid &&
+                signupForm.controls['firstName'].touched
               "
             >
               <div
-                *ngIf="superVariable.controls['firstName'].errors?.['required']"
+                *ngIf="signupForm.controls['firstName'].errors?.['required']"
               >
                 First Name is required
               </div>
               <div
-                *ngIf="superVariable.controls['firstName'].errors?.['minlength']"
+                *ngIf="signupForm.controls['firstName'].errors?.['minlength']"
               >
                 First Name must have at least 3 chars
               </div>
@@ -53,18 +54,19 @@
               placeholder="Last Name"
             />
             <div
+              class="text-danger"
               *ngIf="
-                superVariable.controls['lastName'].invalid &&
-                superVariable.controls['lastName'].touched
+                signupForm.controls['lastName'].invalid &&
+                signupForm.controls['lastName'].touched
               "
             >
               <div
-                *ngIf="superVariable.controls['lastName'].errors?.['required']"
+                *ngIf="signupForm.controls['lastName'].errors?.['required']"
               >
                 Last Name is required
               </div>
               <div
-                *ngIf="superVariable.controls['lastName'].errors?.['minlength']"
+                *ngIf="signupForm.controls['lastName'].errors?.['minlength']"
               >
                 Last Name must have at least 4 chars
               </div>
@@ -80,15 +82,16 @@
               placeholder="Email"
             />
             <div
+              class="text-danger"
               *ngIf="
-                superVariable.controls['email'].invalid &&
-                superVariable.controls['email'].touched
+                signupForm.controls['email'].invalid &&
+                signupForm.controls['email'].touched
               "
             >
-              <div *ngIf="superVariable.controls['email'].errors?.['required']">
+              <div *ngIf="signupForm.controls['email'].errors?.['required']">
                 Email is required
               </div>
-              <div *ngIf="superVariable.controls['email'].errors?.['email']">
+              <div *ngIf="signupForm.controls['email'].errors?.['email']">
                 Enter a valid email
               </div>
             </div>
@@ -103,23 +106,24 @@
               placeholder="Password"
             />
             <div
+              class="text-danger"
               *ngIf="
-                superVariable.controls['password'].invalid &&
-                superVariable.controls['password'].touched
+                signupForm.controls['password'].invalid &&
+                signupForm.controls['password'].touched
               "
             >
               <div
-                *ngIf="superVariable.controls['password'].errors?.['required']"
+                *ngIf="signupForm.controls['password'].errors?.['required']"
               >
                 Password is required
               </div>
               <div
-                *ngIf="superVariable.controls['password'].errors?.['minlength']"
+                *ngIf="signupForm.controls['password'].errors?.['minlength']"
               >
                 Password must have at least 3 chars
               </div>
               <div
-                *ngIf="superVariable.controls['password'].errors?.['maxlength']"
+                *ngIf="signupForm.controls['password'].errors?.['maxlength']"
               >
                 Password must have max 10 chars
               </div>
@@ -130,23 +134,31 @@
           <div class="form-group">
             <input
               type="password"
-              formControlName="confirmPassword"
+              formControlName="password"
               class="form-control"
-              placeholder="Confirm Password"
+              placeholder="Password"
             />
             <div
+              class="text-danger"
               *ngIf="
-                superVariable.controls['confirmPassword'].invalid &&
-                superVariable.controls['confirmPassword'].touched
+                signupForm.controls['password'].invalid &&
+                signupForm.controls['password'].touched
               "
             >
               <div
-                *ngIf="superVariable.controls['confirmPassword'].errors?.['required']"
+                *ngIf="signupForm.controls['password'].errors?.['required']"
               >
-                Confirm Password is required
+                ConfirPassword is required
               </div>
-              <div *ngIf="superVariable.errors?.['mismatch']">
-                Passwords do not match
+              <div
+                *ngIf="signupForm.controls['password'].errors?.['minlength']"
+              >
+                Password must have at least 3 chars
+              </div>
+              <div
+                *ngIf="signupForm.controls['password'].errors?.['maxlength']"
+              >
+                Password must have max 10 chars
               </div>
             </div>
           </div>
@@ -160,15 +172,16 @@
               placeholder="Phone"
             />
             <div
+              class="text-danger"
               *ngIf="
-                superVariable.controls['phone'].invalid &&
-                superVariable.controls['phone'].touched
+                signupForm.controls['phone'].invalid &&
+                signupForm.controls['phone'].touched
               "
             >
-              <div *ngIf="superVariable.controls['phone'].errors?.['required']">
+              <div *ngIf="signupForm.controls['phone'].errors?.['required']">
                 Phone is required
               </div>
-              <div *ngIf="superVariable.controls['phone'].errors?.['pattern']">
+              <div *ngIf="signupForm.controls['phone'].errors?.['pattern']">
                 Enter a valid phone number
               </div>
             </div>
@@ -183,10 +196,11 @@
               value="sign up"
             />
           </div>
+          <span>{{errorMsg}}</span>
         </form>
       </div>
 
-       <div class="col-lg-4">
+      <div class="col-lg-4">
         <div class="media contact-info">
           <span class="contact-info__icon"><i class="ti-home"></i></span>
           <div class="media-body">
